# Multi-Agent-Custom-Automation-Engine-Solution-Accelerator

./: .gitignore  README.md  SCENARIO_UPLOAD_DOCUMENTATION.md  TEAM_CONFIG_VALIDATION.md  WebSocket_Streaming_Summary.md  azure.yaml  azure_custom.yaml  conftest.py  example_scenarios.json  next-steps.md  pytest.ini  test_team_gpt4.json  test_team_o3.json
src/backend/: .env.sample  Dockerfile  Dockerfile.NoCache  app.py  app_config.py  app_kernel.py  check_deployments.py  config_kernel.py  pyproject.toml  requirements.txt  test_utils_date_fixed.py  utils_date.py  utils_kernel.py
src/backend/common/auth/: azure_credential_utils.py
src/backend/common/config/: app_config.py
src/backend/common/database/: cosmosdb.py  database_base.py  database_factory.py
src/backend/common/models/: database_models.py  messages_kernel.py
src/backend/common/services/: json_service.py
src/backend/common/utils/: check_deployments.py  event_utils.py  utils_date.py  utils_kernel.py  websocket_streaming.py
src/backend/context/: cosmos_memory_kernel.py
src/backend/kernel_agents/: agent_base.py  agent_factory.py  agent_utils.py  generic_agent.py  group_chat_manager.py  hr_agent.py  human_agent.py  marketing_agent.py  planner_agent.py  procurement_agent.py  product_agent.py  tech_support_agent.py
src/backend/kernel_tools/: generic_tools.py  hr_tools.py  marketing_tools.py  procurement_tools.py  product_tools.py  tech_support_tools.py
src/backend/models/: messages_kernel.py
src/backend/services/: foundry_agent_service.py  json_service.py  model_validation_service.py  search_validation_service.py
src/backend/tests/: test_agent_integration.py  test_app.py  test_config.py  test_group_chat_manager_integration.py  test_otlp_tracing.py  test_team_specific_methods.py
src/backend/tests/auth/: test_auth_utils.py  test_sample_user.py
src/backend/tests/context/: test_cosmos_memory.py
src/backend/tests/helpers/: test_azure_credential_utils.py
src/backend/tests/middleware/: test_health_check.py
src/backend/v3/api/: router.py
src/mcp_server/: ,env  .env.example  Dockerfile  README_NEW.md  __init__.py  auth.py  docker-compose.yml  mcp_server.py  pyproject.toml  pytest.ini
src/mcp_server/config/: settings.py
src/mcp_server/datasets/: product_table.csv
src/mcp_server/my_mcp_server/: my_mcp_server.py
src/mcp_server/services/: data_tool_service.py  general_service.py  hr_service.py  marketing_service.py  product_service.py  tech_support_service.py
src/mcp_server/utils/: date_utils.py  formatters.py
(+261 files in other folders)
